--- a/Midterm Project/MA415 Midterm Project.Rmd
+++ b/Midterm Project/MA415 Midterm Project.Rmd
@@ -4,7 +4,7 @@ author: "Rachel Feingold"
 date: "3/7/2017"
 output: pdf_document
 ---
-Instructions:
+##Instructions:
 
 Prepare the OSHA data and create a dataset for analysis.
 ```{r setup, include=FALSE}
@@ -21,39 +21,50 @@ require(stringr)
 require(magrittr)
 require(data.table)
 ```
-Reading Data:
+##Reading Data:
 
 I only read the data that was neccessary to the analysis of the most dangerous places to work in Massachusetts.
 ```{r}
 osha <- read.dbf("osha.dbf")
 accidents <- read.dbf("accid.dbf")
 violations <- read.dbf("viol.dbf")
- hazsub <- read.dbf("hazsub.dbf")
-# history <- read.dbf("history.dbf")
-# admpay <- read.dbf("admpay.dbf")
-
+history <- read.dbf("history.dbf")
+relact <- read.dbf("relact.dbf")
 ```
 I also needed to read in the data from lookups, in order to retrieve informations on the coding and different character levels of the various variables.
 ```{r}
 acc <- read.dbf("lookups/acc.dbf")
 hzs <- read.dbf("lookups/hzs.dbf")
+sic <- read.dbf("lookups/sic.dbf") 
+scc <- read.dbf("lookups/scc.dbf")
 ```
 
 Cleaning Data
 
 1. First, I cleaned the OSHA table. I am starting with this one because it is the main table and it has the company names, address, date of inspection, and other descriptive information about the companies.
 
-2. Then, I selected the variables (columns) I deemed most important to the analysis and I discarded the rest. 
+2. Then, I selected the variables (columns) I deemed most important to the analysis and I discarded the rest. I also turned the character variables that had many levels, assigned names to the levels, if there weren't many. If there were many levels, the layout file with descriptions of the variables usually references the lookups dbf's. I would then use the .dbf to help name the levels, and eventually delete the redundant columns. 
 ```{r} 
-tidyosha <- osha[-c(1:4, 9:11, 14:15, 17, 19:20, 22:24, 27:33, 35:59, 61:63, 68:77, 80:92) ]
+tidyosha <- osha[-c(1:4, 6, 9:11, 14:15, 17, 19:20, 22:24, 27:33, 35:59, 61:63, 68:76, 80:92) ]
 rm(osha)
+
+levels(tidyosha$PREVCTTYP) <- c("Accident", "Complaint", "Inspection", "Referral")
+levels(tidyosha$OWNERTYPE) <- c("Private", "Local Govt.", "State Govt.", "Federal Govt.")
+levels(tidyosha$ADVNOTICE) <- c("No", "Yes")
+levels(tidyosha$CAT_SH) <- c("Health", "Safety")
+levels(tidyosha$INSPTYPE) <- c("Fatality/Catastrophe","Complaint", "Referral", "Monitoring","Variance", "Follow-Up", "Related", "Other", "Programmed-Planned","Programmed-Related", "Programmed-Other", "Non-Inspection")
+levels(tidyosha$INSPSCOPE) <- c("Comprehensive", "Partial", "Records Only", "No Inspection")
+
+tidyosha <- left_join(tidyosha, sic, by = "SIC")
+tidyosha <- select(tidyosha, -SIC)
+rm(sic)
 ```
 3. Next, I cleaned the data from the accidents table. 
 ```{r}
 tidyaccid <- accidents[-c(2:5,8,13,15:16)]
 rm(accidents)
 ```
-4. Then, I turned the character variables that had many levels, assigned names to the levels, if there weren't many. If there were many levels, the layout file with descriptions of the variables usually references the lookups dbf's. I would then use the .dbf to help name the levels, and eventually delete the redundant columns. 
+4. Then, I recoded and renamed the character variables.
 ```{r}
 levels(tidyaccid$DEGREE) <- c("no injury", "fatality", "hospitalized", "nonhospitalized")
 
@@ -63,6 +74,7 @@ colnames(natureinj) <- c("NATURE", "VALUE")
 tidyaccid <- left_join(tidyaccid, natureinj, by = "NATURE")
 tidyaccid <- select(tidyaccid, -NATURE)
 names(tidyaccid)[8] <- "NATURE-INJ"
+rm(natureinj)
 
 injsource <- acc[(acc$CATEGORY=="SOURC-INJ"),]
 injsource <- select(injsource, CODE, VALUE)
@@ -70,6 +82,7 @@ colnames(injsource) <- c("SOURCE", "VALUE")
 tidyaccid <- left_join(tidyaccid, injsource, by = "SOURCE")
 tidyaccid <- select(tidyaccid, -SOURCE)
 names(tidyaccid)[8] <- "INJ-SOURCE"
+rm(injsource)
 
 etype <- acc[(acc$CATEGORY=="EVENT-TYPE"),]
 etype <- select(etype, CODE, VALUE)
@@ -77,6 +90,7 @@ colnames(etype) <- c("EVENT", "VALUE")
 tidyaccid <- left_join(tidyaccid, etype, by = "EVENT")
 tidyaccid <- select(tidyaccid, -EVENT)
 names(tidyaccid)[8] <- "TYPE-EVENT"
+rm(etype)
 
 envfac <- acc[(acc$CATEGORY=="ENVIR-FAC"),]
 envfac <- select(envfac, CODE, VALUE)
@@ -84,6 +98,7 @@ colnames(envfac) <- c("ENVIRON", "VALUE")
 tidyaccid <- left_join(tidyaccid, envfac, by = "ENVIRON")
 tidyaccid <- select(tidyaccid, -ENVIRON)
 names(tidyaccid)[8] <- "ENVIR-FAC"
+rm(envfac)
 
 humfac <- acc[(acc$CATEGORY=="HUMAN-FAC"),]
 humfac <- select(humfac, CODE, VALUE)
@@ -91,6 +106,7 @@ colnames(humfac) <- c("HUMAN", "VALUE")
 tidyaccid <- left_join(tidyaccid, humfac, by = "HUMAN")
 tidyaccid <- select(tidyaccid, -HUMAN)
 names(tidyaccid)[8] <- "HUMAN-FAC"
+rm(humfac)
 
 names(tidyaccid)[3] <- "CODE"       # Needed to rename the column to do a join with the lookups code dbf
 tidyaccid <- left_join(tidyaccid, hzs, by = "CODE") 
@@ -100,11 +116,73 @@ names(tidyaccid)[8] <- "HAZ-SUB"
 ```
 
 
-7. Next, I cleaned the violations table. 
+5. Next, I cleaned the violations table. I also changed the character variables that were encoded with codes instead of their actual names. 
 ```{r}
 tidyviol <- violations[-c(2:7, 11, 13:15, 17, 19:48)]
 rm(violations)
+
+levels(tidyviol$EMPHASIS) <- c("Egregious")
+levels(tidyviol$VIOLTYPE) <- c("Other", "Repeat", "Serious", "Unclassified", "Willful")
+
 ```
+6. Next, I cleaned the history table. I also changed the character variables that were encoded with codes instead of their actual names. 
+```{r}
+tidyhist <- history[-c(2:4, 6:7, 9:10, 12:15, 17:19)]
+rm(history)
+
+levels(tidyhist$HISTTYPE) <- c("Failure-To-Abate", "Penalty")
+levels(tidyhist$HISTEVENT) <- c("Appeals Court", "Supreme Court", "Amendment", "Govt Dismissed", "Formal Settlement", "Informal Settlement", "ALJ Decision", "Unknown", "Petition to Modify" , "Review Commission", "Employer Withdrew", "Issued")
+levels(tidyhist$HISTVTYPE) <- c("Other", "Repeat", "Serious", "Unclassfied", "Willful")
+levels(tidyhist$FTAEVENT)  <- c("Appeals Court", "Govt Dismissed", "Formal Settlement", "Informal Settlement", "ALJ Decision", "Unknown", "Issued")
+```
+7. Next, I cleaned the relact table and changes any character variables that were unclearing with the coding given to us. 
+```{r}
+tidyrelact <- relact[-c(2:3, 5)]
+rm(relact)
+
+levels(tidyrelact$RELTYPE) <- c("Accident", "Complaint", "Inspection", "Referral")
+levels(tidyrelact$SAFETY) <- c("Satisfied")
+levels(tidyrelact$HEALTH) <- c("Satisfied")
+```
+##Organizing Data 
+1. After cleaning the most useful databases, I need to join the tables together, using OSHA as the base. The common variable throughout all the tables is AVTIVITYNO, which we use to join the columns by. 
+```{r}
+master <- full_join(tidyosha, tidyaccid, by ="ACTIVITYNO")
+master <- full_join(master, tidyviol, by = "ACTIVITYNO")
+master <- full_join(master, tidyhist, by = "ACTIVITYNO")
+master <- full_join(master, tidyrelact, by = "ACTIVITYNO")
+
+master <- master[c(4,5,6,17,18,19,6,2,3,1,9,10,8,7,11,12,20,21,22,23,24,25,26,15,16,28,27,30,31,32,29,33,13,34,35,14,36,37,38,39)]
+unimaster <- unique(master) # this eliminates duplicate rows
+distinct <- distinct(master) # this does same thing unique() just wanted to see the difference, unique returns original row numbers tho 
+rm(master)
+```
+2. Next, I removed the cleaned data tables, just to clean up the environment.
+```{r}
+rm(acc,hzs,scc,tidyaccid,tidyhist,tidyosha,tidyrelact,tidyviol)
+```
+3. Next, I wanted to check that the NA data was coded correctly. For this I looked at the quantitative variables and their distributions on graphs with ggplot.
+
+```{r}
+sum(unimaster$PASUMHOURS.has.na)
+sum(unimaster$TOTALVIOLS.has.na)
+sum(unimaster$TOTSERIOUS.has.na)
+sum(unimaster$GRAVITY.has.na)
+sum(unimaster$PENCURRENT.has.na)
+sum(unimaster$TOTALFTA.has.na) 
+sum(unimaster$TOTPENLTY.has.na)
+# None of the quantitative variables are coded with NA's which makes statistical analysis easier
+quant <- select(unimaster)
+# Group all the Quantitative data in a subset dataset
 
 
-Organizing Data 
+summarise(unimaster, funs(mean()))
+
+quant <- subset(
+set = subset(unimaster, subset = INSPTYPE=="Complaint")
+table(set$PASUMHOURS)
+set$PASUMHOURS <- set$PASUMHOURS==0
+ggplot(data=set, aes(x = PASUMHOURS)) + geom_histogram()
+# The majority of the values are 0's which is okay. This does not mean that the total sum of inspection activity for these records was 0, it just means that the data was not recorded. 
+
+```
