--- a/Midterm Project/MA415 Midterm Project.Rmd
+++ b/Midterm Project/MA415 Midterm Project.Rmd
@@ -29,8 +29,8 @@ The data tables I choose to include in the final dataset were:
   Osha.dbf- I chose this data table because it was the main table with the companys names, addresses, inspection dates and other descriptions information about the comapnies. 
   Accid.dbf- I chose this data table because it had details about the accidents, which is clearly related to the dangerous levels of workplaces in Massachusetts. I extracted the variables: ACTIVITYNO DEGREE, NATURE, SOURCE, EVENT, ENVIRON, HUMAN, and HAZSUB. 
   Viol.dbf- I chose this data table because it had details on the violations of each inspection. If a company has more violations during an OSHA inspection, then a workplace may be more dangerous to work at. I extracted the variables: ACTIVITYNO, EMPHASIS, PENCURRENT, VIOLTYPE, INSTANCES, and NUMEXPOSED. 
-  History.dbf- I chose this data table because it had details on the history of the penalties imposed on the company and other violations. If a company has many penalties, this may be related to how it complies to safety and health regualtions. I extracted the variables: ACTIVITYNO, HISTTYPE, HISTEVENT, HISTVTYPE, and FTAEVENT. 
-  Relact.dbf- I chose this data table because it had details on whether the inspection was related to another inspection or other action. This can give more information on whether a company is compliant with OSHA guidelines. I extracted the variables: ACTIVITYNO, RELTYPE, SAFETY, and HEALTH.
+  History.dbf- I chose this data table because it had details on the history of the penalties imposed on the company and other violations, as well as the amount and reason for charge. If a company has many penalties, this may be related to how it complies to safety and health regualtions. I extracted the variables: ACTIVITYNO, HISTTYPE, HISTEVENT, HISTVTYPE, and FTAEVENT. 
+  Relact.dbf- I chose this data table because it had details on whether the inspection was related to another inspection or other action. If the inspection is realted to another inspection, then the ACTIVITYNO of that inspection is listed. This can give more information on whether a company is compliant with OSHA guidelines. I extracted the variables: ACTIVITYNO, RELTYPE, SAFETY, and HEALTH.
 
 ```{r}
 osha <- read.dbf("osha.dbf")
@@ -57,6 +57,7 @@ ESTABNAME- name of company/establishment
 SITECITY- Depertment of Commerce city code establishment is in
 SITECNTY- Department of Commerce county code establishment is in
 SITEZIP- zipcode of the establishment
+SITEADD- address of establishment
 OWNERTYPE- type of owner of company (private, local government, state government, federal government)
 ADVNOTICE- whether an advanced notice of the inspection of given 
 CAT_SH- safety or health codes
@@ -64,30 +65,65 @@ INSPTYPE- type of inspection (unprogrammed: fatality/ catashrophe, complaint, re
 INSPSCOPE- how indepth the inspection was (comprehensive, partial, records only, none)
 WHYNOINSPC- if there was no inspection, reason for such (estb. not found, denied entry, employer out of business, etc.) 
 PASUMHOURS- sum of all inspection activity hours reported 
-TOTPENLTY- total current penalities issued
-TOTALFTA- total failure to abate (FTA) penalties issued
+TOTPENLTY- total current penalities issued, may be a result of negotiations between the company and OSHA
+TOTALFTA- total failure to abate (FTA) penalties issued, may also bea  result of negotiations
 TOTALVIOLS- total number of violations issued
 TOTSERIOUS- total number of serious, willful, and repeat violations issued for inspection
-
+OPENDATE- date of opening conference or entry or attempted entry into the site of the inspection
+CLOSEDATE- date of last closing conference held before issuing citations or	exit from the inspection site.
 
 I also turned the character variables that had coding levels, and assigned names to these levels based on the layout text files. In other instances I used the the layout file with descriptions of the variables usually references the lookups dbf's. I would then use the .dbf to help name the levels, and eventually delete the redundant columns. 
 ```{r} 
-tidyosha <- osha[-c(1:4, 6, 9:11, 14:15, 17, 19:20, 22:24, 27:33, 35:59, 61:63, 68:76, 80:92) ]
+# Create new data set, using dplyr select(), to keep certain variables
+tidyosha <- select(osha, PREVCTTYP, ACTIVITYNO, REPORTID, ESTABNAME, SITECITY, SITECNTY, SITEZIP, OWNERTYPE, ADVNOTICE, CAT_SH, INSPTYPE, INSPSCOPE, WHYNOINSP, PASUMHOURS, TOTPENLTY, TOTALFTA, TOTALVIOLS, TOTSERIOUS, OPENDATE, CLOSEDATE, SIC, SITEADD) 
+
+# Remove old osha data table to clean environment
 rm(osha)
 
+# Assign names to the levels, based on layouts
 levels(tidyosha$PREVCTTYP) <- c("Accident", "Complaint", "Inspection", "Referral")
 levels(tidyosha$OWNERTYPE) <- c("Private", "Local Govt.", "State Govt.", "Federal Govt.")
 levels(tidyosha$ADVNOTICE) <- c("No", "Yes")
 levels(tidyosha$CAT_SH) <- c("Health", "Safety")
 levels(tidyosha$INSPTYPE) <- c("Fatality/Catastrophe","Complaint", "Referral", "Monitoring","Variance", "Follow-Up", "Related", "Other", "Programmed-Planned","Programmed-Related", "Programmed-Other", "Non-Inspection")
 levels(tidyosha$INSPSCOPE) <- c("Comprehensive", "Partial", "Records Only", "No Inspection")
+levels(tidyosha$WHYNOINSP) <- c("Est. Not Found", "Employer Out of Bus.", "Unactive Process", "<10 Employees", "Denied Entry", "SIC not on Plan.G", "Voluntary Program", "Non-Exempt", "Other")
 
+# Wanted to change the format of the dates and make them more sensible to read. 
+tidyosha$OPENDATE <- ymd(tidyosha$OPENDATE)
+tidyosha$CLOSEDATE <- ymd(tidyosha$CLOSEDATE)
+
+# Wanted to create a new variable, DURATION, that calculates how long a site was inspected for
+duration <- interval(tidyosha$OPENDATE,tidyosha$CLOSEDATE)
+duration <- as.duration(duration)
+duration <- as.period(duration, days)
+tidyosha <- mutate(tidyosha, INSDURATION = duration)
+rm(duration)
+
+# Want industry names for the companies. This will give a better description and background of the type of companies inspected
 tidyosha <- left_join(tidyosha, sic, by = "SIC")
 tidyosha <- select(tidyosha, -SIC)
 rm(sic)
+
+# Wanted to add names of the towns from the scc.dbf lookups
+# First need to eliminate states other than Massachusetts
+scc <- scc[(scc$STATE=="MA"),]
+# Since each town/ city has two codes- CNTY and CITY, need to combine them
+scc$TOWN <- with(scc, interaction(scc$CITY,scc$COUNTY))
+scc <- select(scc, TOWN, NAME)
+# Need to mimic the form in the tidyosha table
+tidyosha$TOWN <- with(tidyosha, interaction(tidyosha$SITECITY,tidyosha$SITECNTY))
+# Now that they match, we can join them
+tidyosha <- left_join(tidyosha, scc, by="TOWN")
+# Can remove old variables for city, county, linked coding
+tidyosha <- select(tidyosha, -SITECITY, -SITECNTY,-TOWN)
+colnames(tidyosha)[22] <- "CITY"
+rm(scc)
 ```
-3. Next, I cleaned the data from the accidents table. 
-I kept the variables: 
+
+
+Next, I cleaned the data from the accidents table. I kept the variables: 
+
 ACTIVITYNO- unique identifier for each inspection record
 DEGREE- extent of injury (fatal, hospoitalized, nonhispitalized)
 NATURE- nature of the injury (physical characteristics of the injury)
@@ -97,10 +133,10 @@ ENVIRON- contributing factor of the injury
 HUMAN- any human factory involved in the injury
 HAZSUB- any hazardous substances contributing to the incident
 ```{r}
-tidyaccid <- accidents[-c(2:5,8,13,15:16)]
+tidyaccid <- select(accidents, ACTIVITYNO, DEGREE, NATURE, SOURCE, EVENT, ENVIRON, HUMAN, HAZSUB)
 rm(accidents)
 ```
-4. Then, I recoded and renamed the character variables.
+Then, I recoded and renamed the character variables in a similar fashion to the OSHA data table.
 ```{r}
 levels(tidyaccid$DEGREE) <- c("no injury", "fatality", "hospitalized", "nonhospitalized")
 
@@ -120,7 +156,7 @@ tidyaccid <- select(tidyaccid, -SOURCE)
 names(tidyaccid)[8] <- "INJ-SOURCE"
 rm(injsource)
 
-etype <- acc[(acc$CATEGORY=="EVENT-TYPE"),]
+etype <- acc[(acc$CATEGORY=="EVENT-TYP"),]
 etype <- select(etype, CODE, VALUE)
 colnames(etype) <- c("EVENT", "VALUE")
 tidyaccid <- left_join(tidyaccid, etype, by = "EVENT")
@@ -148,31 +184,37 @@ names(tidyaccid)[3] <- "CODE"       # Needed to rename the column to do a join w
 tidyaccid <- left_join(tidyaccid, hzs, by = "CODE") 
 tidyaccid <- select(tidyaccid, -CODE)
 names(tidyaccid)[8] <- "HAZ-SUB"
-
 ```
 
+Next, I cleaned the violations table. I kept the variables:
 
-5. Next, I cleaned the violations table. I kept the variables:
 ACTIVITYNO- unique identifier for each inspetion record
 EMPHASIS- whether violation was egregious (outstandingly bad)
-GRAVITY- level of potential arm to worker (scale of 1-10)
+GRAVITY- level of potential harm to worker (scale of 1-10)
 PENCURRENT- total amount OSHA collected or expects to collect from violations
 VIOLTYPE- type of violation (repeat, serious, unclassified, willful, other)
-INSTANCES- number of unstances of violation of standard related event
-NUMEXPOSED- humber of employees exposed to hazard violate
+INSTANCES- number of instances of violation of standard related event
+NUMEXPOSED- number of employees exposed to hazard violates
 
 I also changed the character variables that were encoded with codes instead of their actual names. 
 ```{r}
-tidyviol <- violations[-c(2:7, 11, 13:15, 17, 19:48)]
+tidyviol <- select(violations, ACTIVITYNO, EMPHASIS, GRAVITY, PENCURRENT, VIOLTYPE, INSTANCES,NUMEXPOSED)
 rm(violations)
 
 levels(tidyviol$EMPHASIS) <- c("Egregious")
 levels(tidyviol$VIOLTYPE) <- c("Other", "Repeat", "Serious", "Unclassified", "Willful")
-
 ```
-6. Next, I cleaned the history table. I also changed the character variables that were encoded with codes instead of their actual names. 
+Next, I cleaned the history table. I kept the variables: 
+
+ACTIVITYNO- unique identifier for each inspection record
+HISTTYPE- identifies whether date relates to a penalty or FTA
+HISTEVENT- identifies source or cause of activity spplied against violation/penalty record (ex. state decision, review commission, amendment)
+HISTVTYPE- current violation type (serious, repeat, willfull, unclassified)
+FTAEVENT- idenitifies source or cause of activity applied against FTA (ex. appeals court, government dismissed, formal settlement)
+
+I also changed the character variables that were encoded with codes instead of their actual names. 
 ```{r}
-tidyhist <- history[-c(2:4, 6:7, 9:10, 12:15, 17:19)]
+tidyhist <- select(history, ACTIVITYNO, HISTTYPE, HISTEVENT, HISTVTYPE, FTAEVENT)
 rm(history)
 
 levels(tidyhist$HISTTYPE) <- c("Failure-To-Abate", "Penalty")
@@ -180,9 +222,16 @@ levels(tidyhist$HISTEVENT) <- c("Appeals Court", "Supreme Court", "Amendment", "
 levels(tidyhist$HISTVTYPE) <- c("Other", "Repeat", "Serious", "Unclassfied", "Willful")
 levels(tidyhist$FTAEVENT)  <- c("Appeals Court", "Govt Dismissed", "Formal Settlement", "Informal Settlement", "ALJ Decision", "Unknown", "Issued")
 ```
-7. Next, I cleaned the relact table and changes any character variables that were unclearing with the coding given to us. 
+Next, I cleaned the relact table. I kept the variables:
+
+ACTIVITYNO- iunique identifier for each inspection record
+RELTYPE- type of related activity (accident, complaint, inspections, referral)
+SAFETY- whether all safety hazards for complaint/ referral are satisfied
+HEALTH- whether all health hazards for complaint/ referral are satisfied
+
+I made changes to any character variables that were unclearing with the coding given to us. 
 ```{r}
-tidyrelact <- relact[-c(2:3, 5)]
+tidyrelact <- select(relact, ACTIVITYNO, RELTYPE, SAFETY, HEALTH)
 rm(relact)
 
 levels(tidyrelact$RELTYPE) <- c("Accident", "Complaint", "Inspection", "Referral")
@@ -190,25 +239,29 @@ levels(tidyrelact$SAFETY) <- c("Satisfied")
 levels(tidyrelact$HEALTH) <- c("Satisfied")
 ```
 ##Organizing Data 
-1. After cleaning the most useful databases, I need to join the tables together, using OSHA as the base. The common variable throughout all the tables is AVTIVITYNO, which I used to join the columns. Some numbers in the ACTIVITYNO field appear more than once because an inspection may have more violations than one record can contain. This is more evident of a dangerous place to work because it means a lot of violated activity happened at this company. 
+After cleaning the most useful databases, I needed to join the tables together, using OSHA as the base. The common variable throughout all the tables is ACTIVITYNO, which I used to join the columns. Some numbers in the ACTIVITYNO field appear more than once because an inspection may have more violations than one record can contain. This is more evident of a dangerous place to work because it means a lot of violated activity happened at this company. 
 ```{r}
 master <- full_join(tidyosha, tidyaccid, by ="ACTIVITYNO")
 master <- full_join(master, tidyviol, by = "ACTIVITYNO")
 master <- full_join(master, tidyhist, by = "ACTIVITYNO")
 master <- full_join(master, tidyrelact, by = "ACTIVITYNO")
 
-master <- master[c(4,5,6,17,18,19,6,2,3,1,9,10,8,7,11,12,20,21,22,23,24,25,26,15,16,28,27,30,31,32,29,33,13,34,35,14,36,37,38,39)]
-unimaster <- unique(master) # this eliminates duplicate rows
-distinct <- distinct(master) # this does same thing unique() just wanted to see the difference, unique returns original row numbers tho 
+# Wanted to reorder the columns in the most sensible way
+master <- master[c("ESTABNAME", "SITEADD", "CITY", "SITEZIP", "INDUSTRY", "OWNERTYPE", "ACTIVITYNO", "REPORTID", "PREVCTTYP", "INSPTYPE", "INSPSCOPE", "CAT_SH", "ADVNOTICE", "WHYNOINSP", "OPENDATE", "CLOSEDATE", "INSDURATION", "PASUMHOURS", "DEGREE", "NATURE-INJ", "INJ-SOURCE", "TYPE-EVENT", "ENVIR-FAC", "HUMAN-FAC", "HAZ-SUB", "TOTALVIOLS", "TOTSERIOUS", "GRAVITY", "EMPHASIS", "VIOLTYPE", "INSTANCES", "NUMEXPOSED", "PENCURRENT", "HISTTYPE", "TOTPENLTY", "HISTEVENT", "HISTVTYPE", "TOTALFTA", "FTAEVENT", "RELTYPE", "SAFETY", "HEALTH")]
+
+# Wanted to eliminate duplicate rows
+unimaster <- unique(master) 
 rm(master)
 ```
-2. Next, I removed the cleaned data tables, just to clean up the environment.
+Next, I removed the cleaned data tables, just to clean up the environment.
 ```{r}
-rm(acc,hzs,scc,tidyaccid,tidyhist,tidyosha,tidyrelact,tidyviol)
+rm(acc,hzs,tidyaccid,tidyhist,tidyosha,tidyrelact,tidyviol)
 ```
-3. Next, I wanted to check that the NA data was coded correctly. For this I looked at the quantitative variables and their distributions on graphs with ggplot.
+Next, I wanted to check that the NA data was coded correctly. For this I looked at the quantitative variables and their distributions on graphs with ggplot.
 
 ```{r}
+# If the sum of the NA values is equal to 0, then the qualitative variables were coded correctly.
+# If the majority of the values are 0's it is okay. This does not mean that the activity for these records weas 0, it just means that the data was not recorded
 sum(unimaster$PASUMHOURS.has.na)
 sum(unimaster$TOTALVIOLS.has.na)
 sum(unimaster$TOTSERIOUS.has.na)
@@ -216,20 +269,77 @@ sum(unimaster$GRAVITY.has.na)
 sum(unimaster$PENCURRENT.has.na)
 sum(unimaster$TOTALFTA.has.na) 
 sum(unimaster$TOTPENLTY.has.na)
-# None of the quantitative variables are coded with NA's which makes statistical analysis easier
-quant <- select(unimaster)
-# Group all the Quantitative data in a subset dataset
 
+# Wanted to create a subset of the unimaster data frame, easier to work with
+quant <- select(unimaster, PASUMHOURS, TOTALVIOLS, TOTSERIOUS, GRAVITY, PENCURRENT, TOTALFTA, TOTPENLTY)
+# Histograms are used because it shwoed the distributions the best
+# Used the xlim to limit the x,axis values shown, for most values, I wanted to not picture 0 values because there were so many and this would skew the plot
+ggplot(data= quant, aes(x = PASUMHOURS)) + geom_histogram() + ggtitle("ggplot of PASUMHOURS distribution") + xlim(c(1,1000))
+mean(quant$PASUMHOURS) # 607.5 , why we made the x-axis show values [1:1000]
+sd(quant$PASUMHOURS) # 1218.05
 
-# summarise(unimaster, funs(mean()))
-# 
-# quant <- subset(
-set = subset(unimaster, subset = INSPTYPE=="Complaint")
-# table(set$PASUMHOURS)
-# set$PASUMHOURS <- set$PASUMHOURS==0
-is.na(o$PASUMHours) <- !o$pasumhours
+ggplot(data= quant, aes(x = TOTALVIOLS)) + geom_histogram() + ggtitle("ggplot of TOTALVIOLS distribution") + xlim(c(1,100))
+mean(quant$TOTALVIOLS) # 14.76 , why we made the x-axis show values [1:100]
+sd(quant$TOTALVIOLS) # 16.15
 
-ggplot(data=unimaster, aes(x = PASUMHOURS)) + geom_histogram() + xlim(c(1,100))
-# The majority of the values are 0's which is okay. This does not mean that the total sum of inspection activity for these records was 0, it just means that the data was not recorded. 
+ggplot(data= quant, aes(x = TOTSERIOUS)) + geom_histogram() + ggtitle("ggplot of TOTSERIOUS distribution")  + xlim(c(1,100))
+mean(quant$TOTSERIOUS) # 14.76 , why we made the x-axis show values [1:100]
+sd(quant$TOTSERIOUS) # 16.15
 
+ggplot(data= quant, aes(x = GRAVITY)) + geom_bar() + ggtitle("ggplot of GRAVITY distribution") 
+# A bar graph was needed because GRAVITY was determined by a scale
+
+ggplot(data= quant, aes(x = PENCURRENT, na.rm = T)) + geom_histogram() + ggtitle("ggplot of PENCURRENT distribution") + xlim(c(1,1000))
+mean(quant$PENCURRENT,na.rm = T) # 513.98 , why we made the x-axis show values [1:1000]
+sd(quant$PENCURRENT, na.rm = T) # 1897.68
+# Needed to omit NA values to get statistical data
+
+ggplot(data= quant, aes(x = TOTALFTA)) + geom_histogram() + ggtitle("ggplot of TOTFTA distribution")  + xlim(c(1,1000))
+mean(quant$TOTALFTA) # 245.95 , why we made the x-axis show values [1:1000]
+sd(quant$TOTALFTA) # 2326.74
+
+ggplot(data= quant, aes(x = TOTPENLTY)) + geom_histogram() + ggtitle("ggplot of TOTPENLTY distribution") 
+# it seems like the distribution is logarithmic, put the x on a log10 scale
+ggplot(data= quant, aes(x = TOTPENLTY)) + geom_histogram() + ggtitle("ggplot of TOTPENLTY distribution") + scale_x_log10()
+# the data now looks like a normal distribution
+mean(quant$TOTPENLTY) # 7660.28 , why we made the x-axis show values [1:1000]
+sd(quant$TOTPENLTY) # 23811
+# the statistical evidence confirms the need for a x log10 scaled
+
+ggplot(data=quant) + geom_smooth(aes(x = TOTSERIOUS, y = TOTPENLTY)) + ggtitle("Total Serious Violations .vs. Total Penalties Issued")
+# The increasing curve (with a positive slope) makes sense. the more serious violations a company has against it, the more penalties it will be issued. 
+
+ggplot(unimaster, aes(x = TOTALVIOLS, fill = INSPTYPE)) + geom_density() + ggtitle("TOTAL VIOLATIONS by INSPECTION TYPE")
+
+ggplot(unimaster, aes(x = GRAVITY, fill = DEGREE )) + geom_density() + ggtitle("GRAVITY OF POTENTIAL HARM TO WORKER by DEGREE OF INJURY")
+# This plot looks messy because of the NA data. We need to find a way to remove it.
 ```
+Now I would like to look at the qualitative variables. They are coded by categories. I will make a table with counts to see if the sample size of each category is similar or if the counts make sense.
+```{r}
+
+# Want to look at Cities
+cities <- table(unimaster$CITY)
+cities <- sort(cities,decreasing = T)
+head(cities)
+# It makes sense that Boston, Worcster, and Springfield are the top three cities with the most OSHA Inspection activity as they are the major cities in Massachusetts
+```
+
+| City                     | BOSTON   WORCESTER SPRINGFIELD NEW BEDFORD  FALL RIVER      QUINCY |
+|--------------------------|--------------------------------------------------------------------|
+| Frequency of Inspections | 90936       33076       25923       18759       17876       17369  |
+
+```{r}
+# Want to look at INSPTYPE
+inspect_type <- table(unimaster$INSPTYPE)
+inspect_type <- sort(inspect_type, decreasing = T)
+head(inspect_type)
+#These are the top 5 types of OSHA inspections in Massachusetts
+```
+| Type of Inspection | Other            Complaint             Referral              Related Fatality/Catastrophe   Programmed-Planned  |
+|--------------------|-----------------------------------------------------------------------------------------------------------------|
+| Count              | 378779               221481               124333                45463                24846                23419 |
+
+
+In closing, the data frame unimaster should be handed off to someone doing the analysis. Upon exploring the different quatitative and qualitative variables, it would be most useful to look at the table from left to right. First, there is information about the different establishment- such as the address and type of company. Then there are details about the OSHA inspections. Next comes accidents, violations, and penalties. I chose this order because it decreases from most pertinant/ most dangerous factors of a workplace to least dangerous factors.  
+
+
